@@ -59,6 +59,7 @@ Bug fixes
  * ``file_size`` and ``file_hash`` not updated when Document file changed (Andreas Bernacca)
  * Fixed order of URLs in project template so that static / media URLs are not blocked (Nick Smith)
  * Added verbose_name_plural for form submission model (Janneke Janssen)
+ * Prevent ``update_index`` failures and incorrect front-end rendering on blank ``TableBlock`` (Carlo Ascani)
 
 
 Upgrade considerations
